2009-01-29  Ulrich Drepper  <drepper@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* string/string.h: Define correct C++ prototypes for gcc 4.4.
	* wcsmbs/wchar.h: Likewise.

2009-01-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/stackinfo.h (stackinfo_get_sp): Define.
	(stackinfo_sub_sp): Define.

2009-01-28  Ulrich Drepper  <drepper@redhat.com>

	[BZ #9750]
	* nscd/mem.c (gc): Use alloca_count to get the real stack usage.
	* include/alloca.h (alloca_account): Define.
	* sysdeps/x86_64/stackinfo.h (stackinfo_get_sp): Define.
	(stackinfo_sub_sp): Define.

	* nscd/connections.c (nscd_init): If database file access be
	opened check whether this is due to permission problems and bail
	in that case.

	[BZ #9741]
	* nscd/mem.c (gc): Fix assignment of he_data in case malloc is used.
	Reported by Jun'ichi Nomura <j-nomura@ce.jp.nec.com>.

2009-01-14  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sysdep.h (INTERNAL_SYSCALL):
	Add "t" to clobber list.
	(INTERNAL_SYSCALL_NCS): Likewise.

2009-01-28  Ulrich Drepper  <drepper@redhat.com>

	* nss/getent.c (print_networks): Don't print comma between aliases.

2009-01-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/tst-clone.c (do_test): Avoid warning.

	* misc/hsearch_r.c (hcreate_r): We need at least three elements in
	the hash table.
	* misc/Makefile (tests): Add bug-hsearch1.
	* misc/bug-hsearch1.c: New file.

2009-01-22  Roland McGrath  <roland@redhat.com>

	* Makeconfig (%.v.i): Strip trailing # comments,
	not only whole-line comments.

2009-01-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-osinfo.h (_dl_setup_stack_chk_guard): Take
	one parameter.  If non-NULL use it to initialize return value.
	(_dl_setup_pointer_guard): New function.
	* sysdeps/unix/sysv/linux/dl-osinfo.h: Likewise.
	* sysdeps/generic/ldsodefs.h: Declare _dl_random.
	* elf/rtld.c (security_init): Pass _dl_random to